--- a/templates/dynmap.haml
+++ b/templates/dynmap.haml
@@ -7,21 +7,36 @@ iconSize: new L.Point(16, 16),
 iconAnchor: new L.Point(8, 8),
 popupAnchor: new L.Point(0, 0)
 });
-var RailIcon = new rail_Icon();
+var rail_RailIcon = new rail_Icon();
 
 
 var rail_stations =[
 - @network.each_station do |st|
   {'name':'#{st.name.escape_single_quotes()}','desc':'#{(st.notes ? st.notes.escape_single_quotes() : '')}','x':#{st.x},'z':#{st.z}},
 ];
+var rail_stationMarkers = [];
 
+var rail_hideStations = function(){
+if(rail_stationMarkers.length){
+$.each(rail_stationMarkers, function(i,marker){
+dynmap.map.removeLayer(marker);
+})
+rail_stationMarkers = [];
+}
+};
+
+var rail_showStations = function(){
+rail_hideStations();
 $.each(rail_stations, function(i, station){
 var loc = $.extend({x:0, y:64, z:0},station);
 var station_markerPosition = dynmap.getProjection().fromLocationToLatLng(loc);
-var marker = new L.Marker(station_markerPosition, {icon: RailIcon});
+var marker = new L.Marker(station_markerPosition, {icon: rail_RailIcon});
 marker.bindPopup(station.name);
+rail_stationMarkers.push(marker);
 dynmap.map.addLayer(marker);
 });
+};
+rail_showStations();
 
 var rail_lines = [
 - @network.each_line do |line|
@@ -34,13 +49,24 @@ var rail_lines = [
 ];
 
 var rail_line_settings = {
-color: 'red',
--# fillColor: '#fff',
--# fillOpacity: 0,
 opacity: 1,
 clickable: false,
 weight: 4
 };
+
+var rail_polyLines = [];
+
+var rail_hideLines = function(){
+if(rail_polyLines.length){
+$.each(rail_polyLines, function(i,polyLine){
+dynmap.map.removeLayer(polyLine);
+})
+rail_polyLines = [];
+}
+};
+
+var rail_showLines = function(){
+rail_hideLines();
 $.each(rail_lines, function(i, rail_line){
 var rail_map_locations = [];
 for(var j=0; j<rail_line[0].length; j++){
@@ -49,10 +75,12 @@ dynmap.getProjection().fromLocationToLatLng(
 $.extend({x:0, y:64, z:0},rail_line[0][j])
 )
 );
-}
-
-dynmap.map.addLayer(new L.Polyline(rail_map_locations,
+polyLine = new L.Polyline(rail_map_locations,
 $.extend(rail_line_settings, {color: rail_line[1]})
-));
-
+)
+dynmap.map.addLayer(polyLine);
+rail_polyLines.push(polyLine);
+}
 });
+}
+rail_showLines();
