Added attribution statements.

--- a/templates/dynmap.haml
+++ b/templates/dynmap.haml
@@ -1,3 +1,11 @@
+\//
+\// This file was generated using the script and data from
+\// https://github.com/leafstorm/railgen
+\//
+\// The userscript and code for interacting with the dynamic
+\// map were adapted from http://janitor61.com/mcpoi/
+\//
+
 var rail_root = "http://dl.dropbox.com/u/35326912/railmap/userscript/";
 
 var rail_Icon = L.Icon.extend({
